k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql-db
  namespace: redbus
spec:
  replicas: 1
  updateStrategy: 
    type: RollingUpdate 
  serviceName: ssms-svc
  selector:
    matchLabels:
      app: redbus
  template:
    metadata:
      labels:
        app: redbus
    spec:
      containers:
        - image: mcr.microsoft.com/mssql/server:2022-latest
          name: ssms
          ports:
            - containerPort: 1433
              name: ssms-port
          resources:
            requests:
              cpu: 300m
              memory: 6Gi
            limits:
              cpu: 350m
              memory: 7Gi
          volumeMounts:
            - name: pvc-volume
              mountPath: /external-data
      volumes:
        - name: pvc-volume
          persistentVolumeClaim:
            claimName: db-pvc
---
apiVersion: v1 
kind: Service 
metadata: 
  name: ssms-svc
  namespace: redbus
spec:
  clusterIP: None
  selector:
    app: redbus
  ports:
    - name: ssms
      port: 1433
      targetPort: ssms-port
      protocol: TCP
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: redbus-deploy
  namespace: redbus
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      imagePullSecrets:
        - name:  github-secret
      containers:
        - name: app
          image: ghcr.io/venkaiahkuncham123-tech/redbus:v3
          ports:
            - containerPort: 3000 
          imagePullPolicy: Always 
          restartPolicy: OnFailure
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 300Mi
          livenessProbe:
            httpGet:
              path: /travelers
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /travelers
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 3
---
apiVersion: v1 
kind: Service 
metadata:
  name: app-svc
  namespace: redbus
spec:
  type: NodePort
  selector:
    app: front-end
  ports:
    - name: app
      port: 80
      targetPort: 3000
      protocol: TCP
---
/* apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redbus-netpol
  namespace: redbus
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: redbus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: redbus
          podSelector:
            matchLabels:
              app: front-end
      ports:
        - protocol: TCP
          port: 1433
    
*/
apiVersion: v1
kind: Namespace
metadata:
  name: test
